--- a/LoginProyectoPTC/SBPA.csproj
+++ b/LoginProyectoPTC/SBPA.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Control.Draggable" Version="1.0.5049.269" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
